# alpha-actions

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  config.yaml  config.yml  pr-version-labeler.yml
.github/workflows/: auto-release-on-pyproject-version-update.yaml  auto-release-on-pyproject-version-update.yaml.yaml  auto-release-on-uv-pyproject-version-update.yaml  build-push-gar.yaml  build-push.yaml  draft-release.yaml  draft-release.yml  github-auto-release.yaml  notify-discord.yaml  notify-teams.yml  pr-version-labeler.yaml  pr-version-labeler.yml  prod-image-tag.yaml  staging-image-tag.yaml  staging-image-tag.yml  update-k8s-mainifest.yaml
scripts/: notify-discord.py  update-yaml.py
tests/: test_update_yaml.py
